--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
     "description": "FlightAware integration with Slack",
     "author": "Timothy Miller miller.tim108@gmail.com",
     "license": "MIT",
-    "main": "index.js",
+    "main": "app.js",
     "scripts": {
-        "start": "node index.js"
+        "start": "node app.js"
     },
     "dependencies": {
-        "@slack/client": "^4.12.0",
         "body-parser": "^1.18.3",
         "express": "^4.16.4",
         "http": "0.0.0",
