--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
     "version": "0.0.1",
     "description": "FlightAware integration with Slack",
     "author": "Timothy Miller miller.tim108@gmail.com",
+    "repository": {
+        "type": "git",
+        "url": "github.com/tangoyankee/slack-flightaware.git"
+    },
     "license": "MIT",
     "main": "app.js",
     "scripts": {
@@ -14,5 +18,8 @@
         "http": "0.0.0",
         "request": "^2.88.0",
         "restler": "^3.4.0"
+    },
+    "devDependencies": {
+        "eslint": "^5.16.0"
     }
 }
