--- a/package.json
+++ b/package.json
@@ -15,9 +15,7 @@
     "dependencies": {
         "body-parser": "^1.18.3",
         "express": "^4.16.4",
-        "http": "0.0.0",
-        "request": "^2.88.0",
-        "restler": "^3.4.0"
+        "request": "^2.88.0"
     },
     "devDependencies": {
         "eslint": "^5.16.0"
