--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "request": "^2.88.0"
     },
     "devDependencies": {
-        "eslint": "^5.16.0"
+        "eslint": "^5.16.0",
+        "nodemon": "^1.19.1"
     }
 }
