--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "slack-flightcheck",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "description": "FlightStats integration with Slack",
     "author": "Timothy Miller miller.tim108@gmail.com",
     "repository": {
@@ -8,9 +8,9 @@
         "url": "github.com/tangoyankee/slack-flightcheck.git"
     },
     "license": "MIT",
-    "main": "app.js",
+    "main": "main/main.js",
     "scripts": {
-        "start": "node app.js"
+        "start": "node main/main.js"
     },
     "dependencies": {
         "body-parser": "^1.18.3",
